model: model architecture

--- a/training_experiments/generator.ipynb
+++ b/training_experiments/generator.ipynb
@@ -322,9 +322,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca2cdd16-e25c-4377-abc6-79350c524a80",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5294047d-4438-46cc-8fd5-4d7bb6928993",
+   "metadata": {},
+   "source": [
+    "#### Model Architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "86f80124-7629-40bf-a41b-05f9cdb34486",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class AttentionHead(nn.Module):\n",
+    "    def __init__(self, embedding_dim: int, head_dim: int, max_seq_len: int, dropout: float):\n",
+    "        super(AttentionHead, self).__init__()\n",
+    "        # Query, Key, Value layers\n",
+    "        self.query = nn.Linear(embedding_dim, head_dim, bias=False)\n",
+    "        self.key = nn.Linear(embedding_dim, head_dim, bias=False)\n",
+    "        self.value = nn.Linear(embedding_dim, head_dim, bias=False)\n",
+    "        \n",
+    "        # A lower triangular matrix to depreciate context from the right\n",
+    "        self.register_buffer(\"mask\", torch.tril(torch.ones(max_seq_len, max_seq_len)))\n",
+    "        \n",
+    "        # Dropout\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, _input):\n",
+    "        batch_size, seq_len, embedding_dim = _input.shape\n",
+    "        k = self.key(_input)\n",
+    "        q = self.query(_input)\n",
+    "        \n",
+    "        # Attention scores --> batch_size x seq_len x seq_len\n",
+    "        attention_scores = q @ k.transpose(-2, -1) * embedding_dim ** -0.5\n",
+    "        # Set forward context to -inf\n",
+    "        attention_scores = attention_scores.masked_fill(\n",
+    "            self.mask[:seq_len, :seq_len] == 0,\n",
+    "            float(\"-inf\")\n",
+    "        )\n",
+    "        attention_scores = F.softmax(attention_scores, dim=-1)\n",
+    "        attention_scores = self.dropout(attention_scores)\n",
+    "        \n",
+    "        # Aggregate values by attention\n",
+    "        v = self.value(_input)\n",
+    "        attention = attention_scores @ v  # batch_size x seq_len x head_dim\n",
+    "        return attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "33e8be86-eb03-4641-b688-377e388a24fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, embedding_dim: int, head_dim: int, head_num: int,\n",
+    "                 max_seq_len: int, dropout: float):\n",
+    "        super(MultiHeadAttention, self).__init__()\n",
+    "        self.attention_heads = nn.ModuleList([\n",
+    "            AttentionHead(embedding_dim=embedding_dim, head_dim=head_dim,\n",
+    "                          max_seq_len=max_seq_len, dropout=dropout)\n",
+    "            for _ in range(head_num)\n",
+    "        ])\n",
+    "        self.output_layer = nn.Linear(head_dim * head_num, embedding_dim)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, _input):\n",
+    "        _output = torch.cat(\n",
+    "            [\n",
+    "                attention_head(_input)\n",
+    "                for attention_head\n",
+    "                in self.attention_heads\n",
+    "            ],\n",
+    "            dim=-1\n",
+    "        )\n",
+    "        _output = self.dropout(self.output_layer(_output))\n",
+    "        return _output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125c49ce-b6a0-4eb1-a2b5-0d020c9f7da7",
+   "id": "85fda973-4c69-4bd3-a2b0-86039bb9cb42",
    "metadata": {},
    "outputs": [],
    "source": []
