model: finished train loop

--- a/training_experiments/generator.ipynb
+++ b/training_experiments/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d18d1679-46bc-463e-9d76-c14018fdf24f",
    "metadata": {
     "tags": []
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "05573cf9-19f8-47b4-a0b0-c44be08db521",
    "metadata": {
     "tags": []
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d02f0556-90a7-4600-b400-aaeced43863f",
    "metadata": {
     "tags": []
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d078b4f6-7e73-4455-9158-d9736067892d",
    "metadata": {
     "tags": []
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7c70a551-b5f5-4383-b168-617bf6da3a89",
    "metadata": {
     "tags": []
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "96ecff37-1394-4548-906c-c1d3f41136e1",
    "metadata": {
     "tags": []
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "61ac92f3-e7f0-47c8-83d9-19918e93a0f5",
    "metadata": {
     "tags": []
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3be9a5e2-3871-48d6-ac32-fb2e0e92f370",
    "metadata": {
     "tags": []
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1007d06c-87c8-4c0e-933b-67f27b787fa4",
    "metadata": {
     "tags": []
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "86f80124-7629-40bf-a41b-05f9cdb34486",
    "metadata": {
     "tags": []
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "33e8be86-eb03-4641-b688-377e388a24fe",
    "metadata": {
     "tags": []
@@ -419,6 +419,342 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "85fda973-4c69-4bd3-a2b0-86039bb9cb42",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, embedding_dim: int, dropout: float):\n",
+    "        super(FeedForward, self).__init__()\n",
+    "        self.feed_forward = nn.Sequential(\n",
+    "            nn.Linear(embedding_dim, embedding_dim * 4),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(embedding_dim * 4, embedding_dim),\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, _input):\n",
+    "        return self.feed_forward(_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e89aa4b-009f-4b14-a43c-9a58662bc0af",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class TransformerBlock(nn.Module):\n",
+    "    def __init__(self, head_num: int, max_seq_len: int, embedding_dim: int, dropout: float):\n",
+    "        super().__init__()\n",
+    "        head_dim = embedding_dim // head_num\n",
+    "        self.self_attention = MultiHeadAttention(\n",
+    "            head_num=head_num,\n",
+    "            head_dim=head_dim,\n",
+    "            embedding_dim=embedding_dim,\n",
+    "            max_seq_len=max_seq_len,\n",
+    "            dropout=dropout,\n",
+    "        )\n",
+    "        self.feed_forward_layer = FeedForward(embedding_dim=embedding_dim, dropout=dropout)\n",
+    "        self.layer_norm1 = nn.LayerNorm(embedding_dim)\n",
+    "        self.layer_norm2 = nn.LayerNorm(embedding_dim)\n",
+    "\n",
+    "    def forward(self, _input):\n",
+    "        x = _input + self.self_attention(self.layer_norm1(_input))\n",
+    "        x = x + self.feed_forward_layer(self.layer_norm2(x))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73a3f571-4c90-4aef-bdeb-2a88b0635bfc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, vocab_size: int, embedding_dim: int, max_seq_len: int,\n",
+    "                 head_num: int, decoder_layer_num: int, dropout: float,\n",
+    "                 use_cuda: Optional[bool] = True):\n",
+    "        super(Transformer, self).__init__()\n",
+    "        # Model parameters\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.embedding_dim = embedding_dim\n",
+    "        self.max_seq_len = max_seq_len\n",
+    "        self.head_num = head_num\n",
+    "        self.decoder_layer_num = decoder_layer_num\n",
+    "        self.dropout = dropout\n",
+    "        self.use_cuda = use_cuda\n",
+    "        \n",
+    "        # Token and positional embedding lookup tables \n",
+    "        self.token_embedding = nn.Embedding(self.vocab_size, self.embedding_dim)\n",
+    "        self.position_embedding = nn.Embedding(self.max_seq_len, self.embedding_dim)\n",
+    "        \n",
+    "        # Decoder transformer blocks\n",
+    "        self.decoder = nn.Sequential(*[\n",
+    "                TransformerBlock(\n",
+    "                    head_num=self.head_num,\n",
+    "                    max_seq_len=self.max_seq_len,\n",
+    "                    embedding_dim=self.embedding_dim,\n",
+    "                    dropout=self.dropout\n",
+    "                )\n",
+    "                for _ in range(self.decoder_layer_num)\n",
+    "        ])\n",
+    "        \n",
+    "        # LM head\n",
+    "        self.lm_head = nn.Linear(self.embedding_dim, self.vocab_size)\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def from_config(cls, config: Config):\n",
+    "        return cls(\n",
+    "            vocab_size=config.vocab_size,\n",
+    "            embedding_dim=config.embedding_dim,\n",
+    "            max_seq_len=config.max_sequence_length,\n",
+    "            head_num=config.attention_head_num,\n",
+    "            decoder_layer_num=config.decoder_layer_num,\n",
+    "            dropout=config.dropout\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, indexed_seq):\n",
+    "        batch_size, seq_len = indexed_seq.shape\n",
+    "        \n",
+    "        token_embeddings = self.token_embedding(indexed_seq)\n",
+    "        positional_embeddings = self.position_embedding(torch.arange(seq_len,\n",
+    "                                                                     device=torch.device(\"cuda\") if self.use_cuda \\\n",
+    "                                                                     else torch.device(\"cpu\")))\n",
+    "\n",
+    "        x = token_embeddings + positional_embeddings\n",
+    "        x = self.decoder(x)\n",
+    "        logits = self.lm_head(x)\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fb96a54-a1c9-4620-8e3e-690c126cef4a",
+   "metadata": {},
+   "source": [
+    "#### Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4556507-322f-4176-b0ce-854bcd50937d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "@define(kw_only=True)\n",
+    "class TransformerTrainer:\n",
+    "    dataset: Dataset\n",
+    "    model: Transformer\n",
+    "    optimizer: AdamW\n",
+    "    lr_scheduler: torch_lr_scheduler.CosineAnnealingLR\n",
+    "    tensorboard_writer: SummaryWriter\n",
+    "    criterion: nn.CrossEntropyLoss = Factory(\n",
+    "        lambda: nn.CrossEntropyLoss()\n",
+    "    )\n",
+    "    best_metrics: dict = Factory(\n",
+    "        lambda: {\"train_loss\": float(\"inf\"), \"validation_loss\": float(\"inf\")}\n",
+    "    )\n",
+    "    device: torch.device = Factory(\n",
+    "        lambda: torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "    )\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def init_trainer(cls, config: Config,\n",
+    "                     device: torch.device,\n",
+    "                     training_snapshot: Optional[Union[str, os.PathLike]] = None,\n",
+    "                     metrics: Optional[Union[str, os.PathLike]] = None):\n",
+    "        # Load state checkpoint if present\n",
+    "        snapshot = None\n",
+    "        if training_snapshot is not None:\n",
+    "            if not os.path.exists(training_snapshot):\n",
+    "                raise FileNotFoundError(f\"File {training_snapshot} doesn't exist :/ Check your snapshots!\")\n",
+    "            snapshot = torch.load(training_snapshot)\n",
+    "            \n",
+    "        # Dataset\n",
+    "        dataset = Dataset.from_config(config)\n",
+    "        # Model\n",
+    "        model = Transformer.from_config(config)\n",
+    "        if snapshot is not None:\n",
+    "            model.load_state_dict(snapshot[\"model\"])\n",
+    "        if device.type == \"cuda\":\n",
+    "            model.cuda()\n",
+    "        # Optimizer        \n",
+    "        optimizer = AdamW(model.parameters(), lr=3e-4)\n",
+    "        if snapshot is not None:\n",
+    "            optimizer.load_state_dict(snapshot[\"optimizer\"])\n",
+    "        # Learning rate scheduler\n",
+    "        last_epoch = 0 if snapshot is None else snapshot[\"last_epoch\"]\n",
+    "        lr_scheduler = torch_lr_scheduler.CosineAnnealingLR(optimizer,\n",
+    "                                                            T_max=(EPOCH_NUM - last_epoch) * len(dataset.train.loader),\n",
+    "                                                            eta_min=1e-5)\n",
+    "        if snapshot is not None:\n",
+    "            lr_scheduler.load_state_dict(snapshot[\"lr_scheduler\"])\n",
+    "            \n",
+    "        # Load the previous best metrics if present\n",
+    "        best_metrics = None\n",
+    "        if metrics is not None:\n",
+    "            if not os.path.exists(metrics):\n",
+    "                raise FileNotFoundError(f\"File {metrics} doesn't exist :/ Do you really save the metrics, huh?\")\n",
+    "            with open(metrics, \"r\") as infile:\n",
+    "                best_metrics = json.load(infile)\n",
+    "                \n",
+    "        # Tensorboard summary writer\n",
+    "        tensorboard_writer = SummaryWriter(TENSORBOARD_PATH, purge_step=last_epoch + 1, flush_secs=5)\n",
+    "        \n",
+    "        kwargs = {\n",
+    "            \"dataset\": dataset,\n",
+    "            \"model\": model,\n",
+    "            \"optimizer\": optimizer,\n",
+    "            \"lr_scheduler\": lr_scheduler,\n",
+    "            \"tensorboard_writer\": tensorboard_writer,\n",
+    "            \"device\": device\n",
+    "        }\n",
+    "        if best_metrics is not None:\n",
+    "            kwargs[\"best_metrics\"] = best_metrics\n",
+    "        \n",
+    "        return cls(**kwargs)\n",
+    "    \n",
+    "    def fit(self,\n",
+    "            start_epoch: Optional[int] = START_EPOCH,\n",
+    "            epoch_num: Optional[int] = EPOCH_NUM,\n",
+    "            log_interval: Optional[int] = LOG_INTERVAL,\n",
+    "            best_model_dump: Optional[Union[str, os.PathLike]] = MODEL_WEIGTHS,\n",
+    "            model_snapshot_dump: Optional[Union[str, os.PathLike]] = MODEL_TRAINING_SNAPSHOT,\n",
+    "            training_log: Optional[Union[str, os.PathLike]] = TRAINING_LOG,\n",
+    "            best_metrics_dump: Optional[Union[str, os.PathLike]] = BEST_METRICS):\n",
+    "        # Mark the processing of one batch as a completed step\n",
+    "        num_steps = (epoch_num - start_epoch) * len(self.dataset.train.loader)\n",
+    "        progress_bar = tqdm(range(num_steps), position=0, leave=True)\n",
+    "        \n",
+    "        for epoch in range(start_epoch, epoch_num, 1):\n",
+    "            self.train_epoch(epoch, training_log, progress_bar)\n",
+    "            \n",
+    "            if epoch == 0 or (epoch + 1) % log_interval == 0:\n",
+    "                self.validate(epoch, best_model_dump, model_snapshot_dump, best_metrics_dump)\n",
+    "        \n",
+    "    def train_epoch(self, epoch: int,\n",
+    "                    training_log: Union[str, os.PathLike], progress_bar: tqdm):\n",
+    "        self.model.train()\n",
+    "        \n",
+    "        epoch_loss = []\n",
+    "        for _input, _target in self.dataset.train.loader:\n",
+    "            if self.device.type == \"cuda\":\n",
+    "                _input, _target = _input.cuda(), _target.cuda()\n",
+    "            predicted = self.model(_input)\n",
+    "            \n",
+    "            batch_size, seq_len, vocab_size = predicted.shape\n",
+    "            predicted = torch.reshape(predicted, (batch_size * seq_len, vocab_size))\n",
+    "            _target = torch.reshape(_target, (batch_size * seq_len,))\n",
+    "            loss = self.criterion(predicted, _target)\n",
+    "            epoch_loss.append(loss.cpu().item())\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            self.optimizer.step()\n",
+    "            self.lr_scheduler.step()\n",
+    "            self.optimizer.zero_grad()\n",
+    "            \n",
+    "            progress_bar.update(1)\n",
+    "            \n",
+    "        mean_epoch_loss = sum(epoch_loss) / len(epoch_loss)\n",
+    "        self.best_metrics[\"train_loss\"] = min(mean_epoch_loss, self.best_metrics[\"train_loss\"])\n",
+    "        self.tensorboard_writer.add_scalar(f\"{LOSS}/{TRAIN}\", mean_epoch_loss, epoch + 1)\n",
+    "        with open(training_log, \"a\") as outfile:\n",
+    "            outfile.write(f\"Epoch #{epoch + 1}\\nMean epoch loss: {mean_epoch_loss}\\n\\n\")\n",
+    "            \n",
+    "    def validate(self, epoch: int, best_model_dump: Union[str, os.PathLike], \n",
+    "                 model_snapshot_dump: Union[str, os.PathLike], best_metrics_dump: Union[str, os.PathLike]):\n",
+    "        self.model.eval()\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            val_loss = []\n",
+    "            \n",
+    "            for _input, _target in self.dataset.validation.loader:\n",
+    "                if self.device.type == \"cuda\":\n",
+    "                    _input, _target = _input.cuda(), _target.cuda()\n",
+    "                    \n",
+    "                predicted = self.model(_input)\n",
+    "                batch_size, seq_len, vocab_size = predicted.shape\n",
+    "                predicted = torch.reshape(predicted, (batch_size * seq_len, vocab_size))\n",
+    "                _target = torch.reshape(_target, (batch_size * seq_len,))\n",
+    "                loss = self.criterion(predicted, _target)\n",
+    "                val_loss.append(loss.cpu().item())\n",
+    "                \n",
+    "        mean_val_loss = sum(val_loss) / len(val_loss)\n",
+    "        self.tensorboard_writer.add_scalar(f\"{LOSS}/{VALIDATION}\", mean_val_loss, epoch + 1)\n",
+    "        # Save model training snapshot\n",
+    "        snapshot = {\n",
+    "            \"model\": self.model.state_dict(),\n",
+    "            \"optimizer\": self.optimizer.state_dict(),\n",
+    "            \"lr_scheduler\": self.lr_scheduler.state_dict(),\n",
+    "            \"last_epoch\": epoch + 1\n",
+    "        }\n",
+    "        self.atomic_write(snapshot, model_snapshot_dump)\n",
+    "        # Save new best weights\n",
+    "        if mean_val_loss < self.best_metrics[\"validation_loss\"]:\n",
+    "            self.atomic_write(self.model.state_dict(), best_model_dump)\n",
+    "            self.best_metrics[\"validation_loss\"] = mean_val_loss\n",
+    "            print(f\"Epoch #{epoch + 1}\\n*** New best validation loss: {mean_val_loss}!\\n\")\n",
+    "        self.atomic_write(self.best_metrics, best_metrics_dump, _format=\"json\")\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def atomic_write(_object: Any, _file: Union[str, os.PathLike],\n",
+    "                     _format: Optional[str] = \"torch\"):\n",
+    "        if type(_file) is str:\n",
+    "            _file = Path(_file)\n",
+    "        base_folder = _file.parent\n",
+    "        tmp_filename = f\"{_file.name.split('.')[0]}.tmp.{_file.name.split('.')[-1]}\"\n",
+    "        tmp_file = base_folder/tmp_filename\n",
+    "        \n",
+    "        mode = \"wb\" if _format == \"torch\" else \"w\"\n",
+    "        with open(tmp_file, mode) as outfile:\n",
+    "            if _format == \"json\":\n",
+    "                json.dump(_object, outfile, ensure_ascii=False, indent=4)\n",
+    "            elif _format == \"torch\":\n",
+    "                torch.save(_object, outfile)\n",
+    "            outfile.flush()\n",
+    "            os.fsync(outfile.fileno())\n",
+    "        os.replace(tmp_file, _file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b52c43e-2ad2-426d-9ae9-488937baa557",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "generator = TransformerTrainer.init_trainer(config, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402cef02-c13a-45bf-a66f-86d3f2078bfb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "generator.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80f24265-547b-40d1-bc31-2eda93efe43d",
    "metadata": {},
    "outputs": [],
    "source": []
