dataset: cleaned out emojis

--- a/training_experiments/data_preparation.ipynb
+++ b/training_experiments/data_preparation.ipynb
@@ -144,7 +144,7 @@
    "id": "7627b5e8-83f5-447a-927c-b8a67af7aa0a",
    "metadata": {},
    "source": [
-    "### Cleaning out repetitive test intros"
+    "### Cleaning out repetitive test intros and emoji garbage"
    ]
   },
   {
@@ -210,6 +210,37 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "16e1e0b0-80fb-451f-b43e-cb9fb9c40ebd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "emoji_pattern = re.compile(\"[\"\n",
+    "                           u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "                           u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "                           u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "                           u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "                           u\"\\U00002500-\\U00002BEF\"  # chinese char\n",
+    "                           u\"\\U00002702-\\U000027B0\"\n",
+    "                           u\"\\U00002702-\\U000027B0\"\n",
+    "                           u\"\\U000024C2-\\U0001F251\"\n",
+    "                           u\"\\U0001f926-\\U0001f937\"\n",
+    "                           u\"\\U00010000-\\U0010ffff\"\n",
+    "                           u\"\\u2640-\\u2642\" \n",
+    "                           u\"\\u2600-\\u2B55\"\n",
+    "                           u\"\\u200d\"\n",
+    "                           u\"\\u23cf\"\n",
+    "                           u\"\\u23e9\"\n",
+    "                           u\"\\u231a\"\n",
+    "                           u\"\\ufe0f\"  # dingbats\n",
+    "                           u\"\\u3030\"\n",
+    "                           \"]+\", re.UNICODE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "4c3a57fc-b8f3-4cfa-a0b2-3d9784edc0bf",
    "metadata": {
     "tags": []
@@ -226,7 +257,8 @@
     "            intro_text = title.split(\": \")[0]\n",
     "        if intro_text is not None and intro_text in garbage_intros:\n",
     "                title = title[len(intro_text) + 1:].strip()\n",
-    "        outfile.write(f\"{title}\\n\")  "
+    "        title = re.sub(emoji_pattern, \"\", title)\n",
+    "        outfile.write(f\"{title.strip()}\\n\")  "
    ]
   },
   {
@@ -239,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "679179bb-2573-483a-957b-5ecd6d7d204e",
    "metadata": {
     "tags": []
@@ -249,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "524 unique symbols\n"
+      "151 unique symbols\n"
      ]
     }
    ],
