model: added sample title generation

--- a/training_experiments/generator.ipynb
+++ b/training_experiments/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d18d1679-46bc-463e-9d76-c14018fdf24f",
    "metadata": {
     "tags": []
@@ -10,10 +10,13 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import re\n",
     "import json\n",
     "from pathlib import Path\n",
     "from attrs import define, Factory, asdict\n",
     "from datetime import datetime\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "05573cf9-19f8-47b4-a0b0-c44be08db521",
    "metadata": {
     "tags": []
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d02f0556-90a7-4600-b400-aaeced43863f",
    "metadata": {
     "tags": []
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d078b4f6-7e73-4455-9158-d9736067892d",
    "metadata": {
     "tags": []
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7c70a551-b5f5-4383-b168-617bf6da3a89",
    "metadata": {
     "tags": []
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "96ecff37-1394-4548-906c-c1d3f41136e1",
    "metadata": {
     "tags": []
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "61ac92f3-e7f0-47c8-83d9-19918e93a0f5",
    "metadata": {
     "tags": []
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3be9a5e2-3871-48d6-ac32-fb2e0e92f370",
    "metadata": {
     "tags": []
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1007d06c-87c8-4c0e-933b-67f27b787fa4",
    "metadata": {
     "tags": []
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "86f80124-7629-40bf-a41b-05f9cdb34486",
    "metadata": {
     "tags": []
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "33e8be86-eb03-4641-b688-377e388a24fe",
    "metadata": {
     "tags": []
@@ -417,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "85fda973-4c69-4bd3-a2b0-86039bb9cb42",
    "metadata": {
     "tags": []
@@ -440,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0e89aa4b-009f-4b14-a43c-9a58662bc0af",
    "metadata": {
     "tags": []
@@ -470,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "73a3f571-4c90-4aef-bdeb-2a88b0635bfc",
    "metadata": {
     "tags": []
@@ -752,9 +755,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "252af410-f8cf-4bad-9c00-daf888bd570e",
+   "metadata": {},
+   "source": [
+    "#### Generate Samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fcc60313-9dd5-48bc-a00a-5948f186f687",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "@define(kw_only=True)\n",
+    "class TheGirlPT:\n",
+    "    tokenizer: PreTrainedTokenizerFast\n",
+    "    model: Transformer\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_pretrained(cls,\n",
+    "                        pretrained_tokenizer: Union[str, os.PathLike],\n",
+    "                        model_config: Union[str, os.PathLike],\n",
+    "                        pretrained_model: Union[str, os.PathLike],\n",
+    "                        use_cuda: Optional[bool] = True):\n",
+    "        tokenizer = PreTrainedTokenizerFast.from_pretrained(pretrained_tokenizer)\n",
+    "        \n",
+    "        config = Config.from_json(model_config)\n",
+    "        model = Transformer.from_config(config)\n",
+    "        device = torch.device(\n",
+    "            \"cpu\"\n",
+    "            if not use_cuda or not torch.cuda.is_available()\n",
+    "            else \"cuda\"\n",
+    "        )\n",
+    "        model.use_cuda = device.type == \"cuda\"\n",
+    "        model.load_state_dict(torch.load(pretrained_model))\n",
+    "        if model.use_cuda:\n",
+    "            model.cuda()\n",
+    "        model.eval()\n",
+    "        \n",
+    "        return cls(tokenizer=tokenizer, model=model)\n",
+    "    \n",
+    "    def encode_sequence(self, _input: str) -> torch.Tensor:\n",
+    "        token_ids = self.tokenizer.encode(_input, add_special_tokens=True, padding=False,\n",
+    "                                          truncation=True, max_length=self.model.max_seq_len,\n",
+    "                                          return_tensors=\"pt\")[:, :-1]\n",
+    "        return token_ids\n",
+    "    \n",
+    "    def tokenize_sequence(self, _input: str) -> Sequence[Tuple[int, str]]:\n",
+    "        token_ids = self.tokenizer.encode(_input, add_special_tokens=False)\n",
+    "        tokens = [\n",
+    "            (_id, self.tokenizer.decode([_id], skip_special_tokens=True))\n",
+    "            for _id\n",
+    "            in token_ids\n",
+    "        ]\n",
+    "        return tokens\n",
+    "    \n",
+    "    def generate_sample(self,\n",
+    "                        seed_phrase: Optional[str] = \"\",\n",
+    "                        max_new_tokens: Optional[int] = 24,\n",
+    "                        temperature: Optional[float] = 1.0) -> str:\n",
+    "        seed_ids = self.encode_sequence(seed_phrase)\n",
+    "        if self.model.use_cuda:\n",
+    "            seed_ids = seed_ids.cuda()\n",
+    "            \n",
+    "        new_tokens_num = min(self.model.max_seq_len - seed_ids.shape[-1], max_new_tokens)\n",
+    "        for _ in range(new_tokens_num):\n",
+    "            logp_next = self.model(seed_ids)\n",
+    "            p_next = F.softmax(logp_next / temperature, dim=-1).cpu().data.numpy()[0][-1]\n",
+    "\n",
+    "            # sample next token and push it back into x_sequence\n",
+    "            next_ix = np.random.choice(self.model.vocab_size, p=p_next)\n",
+    "            next_ix = torch.tensor([[next_ix]])\n",
+    "            if self.model.use_cuda:\n",
+    "                next_ix = next_ix.cuda()\n",
+    "            seed_ids = torch.cat((seed_ids, next_ix), dim=-1)\n",
+    "            \n",
+    "        seed_ids = seed_ids.cpu().data.numpy()[0]\n",
+    "        restored_text = self.tokenizer.decode(seed_ids, skip_special_tokens=True)\n",
+    "        restored_text = re.sub(r\"##\", \"\", restored_text)\n",
+    "        return restored_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "85d6f825-082e-4d57-873a-8a2d162fdaa7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "thegpt = TheGirlPT.from_pretrained(pretrained_tokenizer=PRETRAINED_TOKENIZER,\n",
+    "                                  model_config=MODEL_CONFIG,\n",
+    "                                  pretrained_model=MODEL_WEIGTHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fe61de34-565b-4826-8adc-c7b2d860a4d0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Нон-байнари тест, и мы скажем, как ты умрешь\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(thegpt.generate_sample(seed_phrase=\"Нон-байнари тест\", max_new_tokens=10, temperature=0.5))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80f24265-547b-40d1-bc31-2eda93efe43d",
+   "id": "6e548675-dfcc-45d4-949a-767f236cf537",
    "metadata": {},
    "outputs": [],
    "source": []
